forgot password implemented

--- a/src/app/Pages/Authentication/forgotpassword/forgotpassword.component.html
+++ b/src/app/Pages/Authentication/forgotpassword/forgotpassword.component.html
@@ -1,1 +1,74 @@
-<p>forgotpassword works!</p>
+<div
+  class="container-fluid d-flex justify-content-center align-items-center bg-light"
+  style="height:100vh;"
+>
+  <mat-card appearance="outlined" style="height:55vh;width:50%;">
+    <mat-card-header>
+      <mat-card-title-group>
+        <mat-card-title>
+          <h2>Forgot Password</h2>
+        </mat-card-title>
+      </mat-card-title-group>
+    </mat-card-header>
+
+    <mat-card-content>
+      <form [formGroup]="forgotPasswordFormGroup" (ngSubmit)="submit()">
+        <div class="row">
+          <div class="col-sm-12">
+            <mat-form-field class="example-form-field" appearance="outline" style="width:100%;">
+              <mat-label>Email</mat-label>
+              <input matInput type="email" formControlName="email" />
+              <mat-error *ngIf="forgotPasswordFormGroup.get('email')?.hasError('required')">
+                Email is required
+              </mat-error>
+              <mat-error *ngIf="forgotPasswordFormGroup.get('email')?.hasError('email')">
+                Please enter a valid email
+              </mat-error>
+            </mat-form-field>
+          </div>
+
+          <div class="col-sm-12">
+            <mat-form-field class="example-form-field mt-2" appearance="outline" style="width:100%;">
+              <mat-label>New Password</mat-label>
+              <input matInput type="password" formControlName="password" />
+              <mat-error *ngIf="forgotPasswordFormGroup.get('password')?.hasError('required')">
+                Password is required
+              </mat-error>
+              <mat-error *ngIf="forgotPasswordFormGroup.get('password')?.hasError('minlength')">
+                Password must be at least 6 characters long
+              </mat-error>
+            </mat-form-field>
+          </div>
+
+          <div class="col-sm-12">
+            <mat-form-field class="example-form-field mt-2" appearance="outline" style="width:100%;">
+              <mat-label>Confirm Password</mat-label>
+              <input matInput type="password" formControlName="confirmPassword" />
+              <mat-error *ngIf="forgotPasswordFormGroup.get('confirmPassword')?.hasError('required')">
+                Confirm password is required
+              </mat-error>
+              <mat-error
+                *ngIf="forgotPasswordFormGroup.get('confirmPassword')?.hasError('minlength')"
+              >
+                Confirm password must be at least 6 characters long
+              </mat-error>
+              <mat-error *ngIf="passwordsDoNotMatch()">
+                Passwords do not match
+              </mat-error>
+            </mat-form-field>
+          </div>
+
+          <div class="col-sm-6">
+            <button mat-raised-button color="primary" type="submit" [disabled]="forgotPasswordFormGroup.invalid">
+              Submit
+            </button>
+          </div>
+
+          <div class="col-sm-6 mt-2 d-flex justify-content-end">
+            <a [routerLink]="['/login']">Log in</a>
+          </div>
+        </div>
+      </form>
+    </mat-card-content>
+  </mat-card>
+</div>
