--- a/src/app/Pages/Authentication/login/login.component.html
+++ b/src/app/Pages/Authentication/login/login.component.html
@@ -58,7 +58,7 @@
                     <button mat-raised-button color="primary" (click)="loginSubmit()">Login</button>
                 </div>
                 <div class="col-sm-6 mt-2 d-flex justify-content-end">
-                    <a href="forgotPassword">Forgot Password</a>
+                    <a [routerLink]="['/forgotpassword']" >Forgot Password</a>
                 </div>
             </div>
 
