--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,16 @@ html, body { height: 100%; }
 
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
-.custom-snackbar {
-    background-color: #4caf50; /* Green color */
+.success {
+    /* background-color: #4caf50; Green color */
     color: white; /* Text color */
-  }
+    --mdc-snackbar-container-color: rgb(27, 169, 27) !important;
+    
+}
+
+.error {
+    /* background-color: #4caf50; Green color */
+    color: white; /* Text color */
+    --mdc-snackbar-container-color: red !important;
+    
+}
