--- a/src/app/Pages/AdminDashboard/admindashboard/admindashboard.component.html
+++ b/src/app/Pages/AdminDashboard/admindashboard/admindashboard.component.html
@@ -1,1 +1,10 @@
-<p>admindashboard works!</p>
+<app-header></app-header>
+<div class="row" style="height: 100%;width:100%;">
+    <div class="col-sm-2">
+        <app-sidenav></app-sidenav>
+
+    </div>
+    <div class="col-sm-10">
+        <router-outlet></router-outlet>
+    </div>
+</div>
